--- a/src/styles/_partials/_layout.scss
+++ b/src/styles/_partials/_layout.scss
@@ -1,7 +1,7 @@
 // Layout
 // ================================
 body {
-	//padding-top:5rem;
+	padding-bottom:5rem;
 }
 .site-container {
 	position:relative;
@@ -18,7 +18,7 @@ body {
 	bottom: 0;
 	width: 100%;
 	/* Set the fixed height of the footer here */
-	height: auto;
+	height: 5rem;
 	background-color: #acaaca;
 }
 	.main-footer-content {
